# sqlite-utils-move-tables

./: pyproject.toml  sqlite_utils_move_tables.py
tests/: test_move_tables.py
